Added css tag 'style'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    div{
+        display: inline-flex;
+    }
+    table th{
+        border: 1px solid black;
+        background-color: #e29c9c;
+        display: flex;
+    }
+    table td{
+        border: 1px solid black;
+        background-color: #9cc8e2;
+        display: flex;
+        border-top: 0;
+    }
+</style>
 <body>
     <script src="./scripts.js"></script>
 </body>
